<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_imagine_all_the">Imagine all the people you meet in your life. There are so many. They come in like waves, trickling in and out with the tide. Some waves are much bigger and make more of an impact than others. Sometimes the waves bring with them things from deep in the bottom of the sea and they leave those things tossed onto the shore. Imprints against the grains of sand that prove the waves had once been there, long after the tide recedes.</string>
<string name="lbl_k">k</string>
<string name="msg_see_all_people">SEE ALL PEOPLE YOU FOLLOW</string>
<string name="lbl_poeticule">POETICULE</string>
<string name="msg_you_are_alive_b">You are alive
but are you living
you are breathing
the brain is working
the heart is pumping
the sun is rising
but are you loving to
chreish tiny little moments
you</string>
<string name="msg_tiny_little_mom3">Tiny Little Moments</string>
<string name="lbl_by_nupur_shinde">By Nupur Shinde</string>
<string name="lbl_poem">Poem</string>
<string name="lbl_by_collen_hover">By Collen Hover</string>
<string name="lbl_stained_window2">Stained Window</string>
<string name="lbl_stained_window3">Stained Window</string>
<string name="msg_magic_spell_of">MAGIC SPELL OF NATURE</string>
<string name="msg_tiny_little_mom2">Tiny Little Moments</string>
<string name="msg_she_was_as_stro">She was as strong as
a father,
The world tore her apart
Still she flew high in sky</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="msg_poeticule_is_an">Poeticule is an app where we provide a platform to showcase your writing, be it poems or blog. You can post it here for the world to see!!</string>
<string name="lbl_about_us">ABOUT US</string>
<string name="msg_magic_spell_of3">Magic Spell of Nature</string>
<string name="msg_strong_as_feath3">Strong as Feather</string>
<string name="msg_magic_spell_of2">Magic Spell of Nature</string>
<string name="msg_tiny_little_mom">TINY LITTLE MOMENTS</string>
<string name="lbl_follow">FOLLOW</string>
<string name="msg_under_moonlight">Under Moonlight 
listening to ferocious
beach waves
hair twirling with wind
she somewhere lost her 
control on mind.
And went deep into
passive thoughts.
That was the magic 
spell of Nature.</string>
<string name="lbl_ugly_love">UGLY LOVE</string>
<string name="lbl_suggestions">SUGGESTIONS</string>
<string name="lbl_posts">POSTS</string>
<string name="lbl_blog_poem_title">BLOG/POEM TITLE</string>
<string name="lbl_stained_window">STAINED WINDOW</string>
<string name="msg_you_look_up_and">You look up and think, I wish I was up there.
But you\u2019re not.
Ugly love becomes you.
Consumes you.
Makes you hate it all.
Makes you realize that all the beautiful parts aren\u2019t even worth it. 
Without the beautiful, you\u2019ll never risk feeling this.
You\u2019ll never risk feeling the ugly.
So you give it up. You give it all up. 
You never want love again, no matter what kind it is,
because no type of love will ever be worth living through the ugly love again.</string>
<string name="msg_iamnupur_nupur">iamnupur
Nupur Shinde

I love ankletsss</string>
<string name="lbl_username">Username</string>
<string name="lbl_waves3">Waves</string>
<string name="lbl_waves2">Waves</string>
<string name="msg_username_bio">Username
BIO
.
.
.
.</string>
<string name="lbl_ugly_love3">Ugly Love</string>
<string name="lbl_ugly_love2">Ugly Love</string>
<string name="lbl_search">SEARCH</string>
<string name="msg_strong_as_feath">STRONG AS FEATHER</string>
<string name="msg_stained_window">Stained window with memories
Through the window
she saw rain drops
kissing the dusty rusty green leaves.
She was dancing in his arms
and grass dancing too.
Suddenly a drop made her 
hand little wet and
there was rain, leaves, grass,
window but
he was not there and 
she was all alone just
left with
Stained window with memories.</string>
<string name="lbl_network">NETWORK</string>
<string name="lbl_interest">INTEREST</string>
<string name="lbl_screen_1">SCREEN 1</string>
<string name="msg_by_sakshi_sakha">By Sakshi Sakhare</string>
<string name="lbl_screen_8">SCREEN 8</string>
<string name="lbl_screen_9">SCREEN 9</string>
<string name="lbl_screen_6">SCREEN 6</string>
<string name="lbl_waves">WAVES</string>
<string name="lbl_screen_4">SCREEN 4</string>
<string name="lbl_screen_5">SCREEN 5</string>
<string name="msg_smecyyyy_sakshi">Smecyyyy\u2028Sakshi Sakhare
\u2028ding ding ding</string>
<string name="lbl_blog">Blog</string>
<string name="lbl_screen_2">SCREEN 2</string>
<string name="lbl_screen_3">SCREEN 3</string>
<string name="msg_strong_as_feath2">Strong as Feather</string>
<string name="msg_collen_hover_h">Collen Hover

Hovering is my hobby</string>
<string name="lbl_notification">Notification</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_screen_10">SCREEN 10</string>
<string name="lbl_screen_12">SCREEN 12</string>
<string name="lbl_screen_11">SCREEN 11</string>
<string name="lbl_screen_14">SCREEN 14</string>
<string name="msg_sakshi_sakhare">sakshi_sakhare \u2028Sakshi Sakare</string>
<string name="lbl_screen_13">SCREEN 13</string>
<string name="lbl_screen_16">SCREEN 16</string>
<string name="lbl_screen_15">SCREEN 15</string>
<string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
</resources>
