<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="screen2VM" type="com.application.app.modules.screen2.data.viewmodel.Screen2VM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGroup197"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleblack_900">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintGroup194"
                android:layout_height="wrap_content" android:layout_width="match_parent">
                <ImageView android:clickable="true"
                    android:id="@+id/imageCiclosesmall"
                    android:layout_height="@dimen/_46pxh"
                    android:layout_marginEnd="@dimen/_209pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_70pxv"
                    android:layout_width="@dimen/_46pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_ciclosesmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintGroup195"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_29pxv"
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageCiclosesmall">
                    <View
                        android:background="@drawable/rectangle_bg_gray_400_radius_41"
                        android:clickable="true"
                        android:id="@+id/viewEllipse2"
                        android:layout_height="@dimen/_82pxv"
                        android:layout_marginStart="@dimen/_19pxh"
                        android:layout_width="@dimen/_85pxh"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/txtUsername"
                        app:layout_constraintHorizontal_bias="0.08"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
                    <TextView android:clickable="true"
                        android:id="@+id/txtUsername"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_7pxv"
                        android:layout_marginEnd="@dimen/_27pxh"
                        android:layout_marginStart="@dimen/_9pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="wrap_content"
                        android:text="@{screen2VM.screen2Model.txtUsername}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.01"
                        app:layout_constraintStart_toEndOf="@+id/viewEllipse2"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/txtMontserratsemibold18_1" tools:text="@string/lbl_username"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView android:clickable="true"
                    android:gravity="start" android:id="@+id/txtNETWORK"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_64pxh"
                    android:layout_marginStart="@dimen/_64pxh"
                    android:layout_marginTop="@dimen/_150pxv"
                    android:layout_width="0dp"
                    android:text="@{screen2VM.screen2Model.txtNETWORK}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintGroup195"
                    style="@style/txtMontserratbold24_1" tools:text="@string/lbl_network"/>
                <TextView android:gravity="center"
                    android:id="@+id/txtINTEREST"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_71pxh"
                    android:layout_marginStart="@dimen/_70pxh"
                    android:layout_marginTop="@dimen/_70pxv"
                    android:layout_width="0dp"
                    android:text="@{screen2VM.screen2Model.txtINTEREST}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNETWORK"
                    style="@style/txtMontserratbold24_1" tools:text="@string/lbl_interest"/>
                <TextView android:gravity="center"
                    android:id="@+id/txtABOUTUS"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_185pxv"
                    android:layout_marginEnd="@dimen/_64pxh"
                    android:layout_marginStart="@dimen/_67pxh"
                    android:layout_marginTop="@dimen/_70pxv"
                    android:layout_width="0dp"
                    android:text="@{screen2VM.screen2Model.txtABOUTUS}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtINTEREST"
                    style="@style/txtMontserratbold24_1" tools:text="@string/lbl_about_us"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
