<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="screen15VM" type="com.application.app.modules.screen15.data.viewmodel.Screen15VM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGroup67"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintGroup57"
                android:layout_height="wrap_content" android:layout_width="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintGroup58"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" style="@style/groupStylepurple_900">
                    <TextView android:gravity="start"
                        android:id="@+id/txtPOETICULE"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_30pxv"
                        android:layout_width="0dp"
                        android:text="@{screen15VM.screen15Model.txtPOETICULE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/txtMontserratbold36" tools:text="@string/lbl_poeticule"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintGroup59"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_24pxv"
                        android:layout_marginTop="@dimen/_21pxv"
                        android:layout_width="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtPOETICULE">
                        <View
                            android:background="@drawable/rectangle_border_white_a700_radius_8_065"
                            android:id="@+id/viewEllipse1"
                            android:layout_height="@dimen/_16pxv"
                            android:layout_marginStart="@dimen/_278pxh"
                            android:layout_width="@dimen/_17pxh"
                            app:layout_constraintEnd_toStartOf="@+id/viewLine4"
                            app:layout_constraintHorizontal_bias="0.77"
                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
                        <ImageView android:clickable="true"
                            android:id="@+id/imageNOTIFICATIONIC"
                            android:layout_height="@dimen/_20pxh"
                            android:layout_marginEnd="@dimen/_14pxh"
                            android:layout_width="@dimen/_15pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_notificationic_1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.39"
                            app:layout_constraintStart_toEndOf="@+id/viewLine4" app:layout_constraintTop_toTopOf="parent"/>
                        <View
                            android:background="@drawable/rectangle_border_white_a700"
                            android:id="@+id/viewLine4"
                            android:layout_height="@dimen/_6pxv"
                            android:layout_marginEnd="@dimen/_31pxh"
                            android:layout_width="@dimen/_7pxh"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/imageNOTIFICATIONIC"
                            app:layout_constraintStart_toEndOf="@+id/viewEllipse1" app:layout_constraintTop_toBottomOf="@+id/viewEllipse1"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <ImageView android:id="@+id/imageEllipse7"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/_105pxh"
                    android:layout_marginStart="@dimen/_95pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/txtIamnupurNupur"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintGroup58"
                    app:layout_constraintWidth_percent="0.44444445"
                    circular="@{true}"
                    imageRes="@{@drawable/img_ellipse7}" tools:src="@drawable/img_ellipse7"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtIamnupurNupur"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="0dp"
                    android:text="@{screen15VM.screen15Model.txtIamnupurNupur}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageEllipse7"
                    style="@style/txtMontserratsemibold14" tools:text="@string/msg_iamnupur_nupur"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtPOSTS"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_109pxh"
                    android:layout_marginStart="@dimen/_118pxh"
                    android:layout_width="0dp"
                    android:text="@{screen15VM.screen15Model.txtPOSTS}"
                    app:layout_constraintEnd_toEndOf="@+id/txtIamnupurNupur"
                    app:layout_constraintStart_toStartOf="@+id/txtIamnupurNupur"
                    app:layout_constraintTop_toBottomOf="@+id/txtIamnupurNupur"
                    style="@style/txtMontserratsemibold24" tools:text="@string/lbl_posts"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintGroup62"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtPOSTS">
                    <ImageView android:clickable="true"
                        android:id="@+id/imageRectanglefirst"
                        android:layout_height="0dp"
                        android:layout_width="0dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/txtSTAINEDWINDOW"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.31347963"
                        imageRes="@{@drawable/img_rectangle11_1}" tools:src="@drawable/img_rectangle11_1"/>
                    <TextView android:clickable="true"
                        android:gravity="start"
                        android:id="@+id/txtSTAINEDWINDOW"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_73pxv"
                        android:layout_marginEnd="@dimen/_1pxh"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_width="0dp"
                        android:text="@{screen15VM.screen15Model.txtSTAINEDWINDOW}"
                        app:layout_constraintBottom_toBottomOf="@+id/imageRectanglefirst"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageRectanglefirst"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/txtMontserratsemibold18" tools:text="@string/lbl_stained_window"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintGroup63"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/constraintGroup62">
                    <ImageView android:clickable="true"
                        android:id="@+id/imageRectanglefirst1"
                        android:layout_height="0dp"
                        android:layout_width="0dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/txtMAGICSPELLOF"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.31347963"
                        imageRes="@{@drawable/img_rectangle12}" tools:src="@drawable/img_rectangle12"/>
                    <TextView android:clickable="true"
                        android:gravity="start"
                        android:id="@+id/txtMAGICSPELLOF"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_73pxv"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_width="0dp"
                        android:text="@{screen15VM.screen15Model.txtMAGICSPELLOF}"
                        app:layout_constraintBottom_toBottomOf="@+id/imageRectanglefirst1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageRectanglefirst1"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/txtMontserratsemibold18" tools:text="@string/msg_magic_spell_of"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintGroup64"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/constraintGroup63">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintRectangle13"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_width="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/txtTINYLITTLEMOM"
                        app:layout_constraintHorizontal_bias="0.01"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" style="@style/groupStylegray_400">
                        <ImageView android:clickable="true"
                            android:id="@+id/imageRectanglefirsrt"
                            android:layout_height="@dimen/_100pxh"
                            android:layout_width="@dimen/_100pxh"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            imageRes="@{@drawable/img_rectangle14}" tools:src="@drawable/img_rectangle14"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <TextView android:clickable="true"
                        android:gravity="start"
                        android:id="@+id/txtTINYLITTLEMOM"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_73pxv"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_width="0dp"
                        android:text="@{screen15VM.screen15Model.txtTINYLITTLEMOM}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/constraintRectangle13"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/txtMontserratsemibold18" tools:text="@string/msg_tiny_little_mom"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintFOOTER"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintGroup64"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/constraintGroup64" style="@style/groupStyleblack_900">
                    <ImageView android:clickable="true"
                        android:id="@+id/imageHOMEICON"
                        android:layout_height="@dimen/_48pxh"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_marginEnd="@dimen/_158pxh"
                        android:layout_marginStart="@dimen/_159pxh"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_width="@dimen/_43pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_homeicon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintGroup65"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/constraintGroup64">
                    <ImageView android:clickable="true"
                        android:id="@+id/imageRectanglefist"
                        android:layout_height="0dp"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_width="0dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/txtPrice"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.31347963"
                        imageRes="@{@drawable/img_rectangle15}" tools:src="@drawable/img_rectangle15"/>
                    <TextView android:clickable="true"
                        android:gravity="start"
                        android:id="@+id/txtPrice"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_73pxv"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_width="0dp"
                        android:text="@{screen15VM.screen15Model.txtPrice}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageRectanglefist"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/txtMontserratsemibold18" tools:text="@string/msg_strong_as_feath"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
